@@ -54,8 +54,9 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
         checkBoxContours.setSelected(view.isDrawContours());
         spinnerContourSeparation.setValue(view.getContourSeparation());
         checkBoxBackgroundImage.setSelected(view.getBackgroundImage() != null);
+        config = Configuration.getInstance();
+        spinnerRenderDistance.setValue(config.getViewDistance() / 16);
 
-        Configuration config = Configuration.getInstance();
         if (config.getBackgroundImage() != null) {
             fieldBackgroundImage.setText(config.getBackgroundImage().getAbsolutePath());
         }
@@ -165,12 +166,11 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
 
     private void updateBackgroundImageFile() {
         File file = new File(fieldBackgroundImage.getText());
-        Configuration config = Configuration.getInstance();
         if (! config.isSafeMode()) {
             BufferedImage image = loadImage(this, file);
             if (image != null) {
                 // The loading succeeded
-                Configuration.getInstance().setBackgroundImage(file);
+                config.setBackgroundImage(file);
                 view.setBackgroundImage(image);
             }
         } else {
@@ -204,7 +204,6 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
     }
 
     private void addOverlay() {
-        final Configuration config = Configuration.getInstance();
         final File imageFile = selectImageForOpen(this, "an overlay image file", config.getOverlaysDirectory());
         if (imageFile != null) {
             final Overlay overlay = new Overlay(imageFile);
@@ -239,6 +238,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
      * WARNING: Do NOT modify this code. The content of this method is
      * always regenerated by the Form Editor.
      */
+    @SuppressWarnings({"DataFlowIssue", "Convert2Lambda", "Anonymous2MethodRef"})
     // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
 
@@ -268,6 +268,9 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
         buttonEditOverlay = new javax.swing.JButton();
         jScrollPane2 = new javax.swing.JScrollPane();
         tableOverlays = new javax.swing.JTable();
+        jLabel2 = new javax.swing.JLabel();
+        spinnerRenderDistance = new javax.swing.JSpinner();
+        jLabel3 = new javax.swing.JLabel();
 
         setDefaultCloseOperation(javax.swing.WindowConstants.DISPOSE_ON_CLOSE);
         setTitle("Configure View");
@@ -413,6 +416,17 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
         });
         jScrollPane2.setViewportView(tableOverlays);
 
+        jLabel2.setText("Render distance:");
+
+        spinnerRenderDistance.setModel(new javax.swing.SpinnerNumberModel(12, 1, 32, 1));
+        spinnerRenderDistance.addChangeListener(new javax.swing.event.ChangeListener() {
+            public void stateChanged(javax.swing.event.ChangeEvent evt) {
+                spinnerRenderDistanceStateChanged(evt);
+            }
+        });
+
+        jLabel3.setText("chunks");
+
         javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
         getContentPane().setLayout(layout);
         layout.setHorizontalGroup(
@@ -427,12 +441,16 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addComponent(buttonResetBackgroundColour)
                         .addGap(0, 0, Short.MAX_VALUE))
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
-                        .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addComponent(buttonClose))
                     .addGroup(layout.createSequentialGroup()
                         .addContainerGap()
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                            .addGroup(layout.createSequentialGroup()
+                                .addComponent(jLabel2)
+                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                                .addComponent(spinnerRenderDistance, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                                .addComponent(jLabel3)
+                                .addGap(0, 0, Short.MAX_VALUE))
                             .addGroup(layout.createSequentialGroup()
                                 .addGap(21, 21, 21)
                                 .addComponent(jScrollPane2, javax.swing.GroupLayout.PREFERRED_SIZE, 0, Short.MAX_VALUE)
@@ -481,6 +499,10 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
                                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                 .addComponent(buttonSelectBackgroundImage)))))
                 .addContainerGap())
+            .addGroup(layout.createSequentialGroup()
+                .addContainerGap()
+                .addComponent(buttonClose)
+                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         );
         layout.setVerticalGroup(
             layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
@@ -530,6 +552,11 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                     .addComponent(jLabel14)
                     .addComponent(comboBoxBackgroundImageMode, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+                .addGap(18, 18, 18)
+                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
+                    .addComponent(jLabel2)
+                    .addComponent(spinnerRenderDistance, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addComponent(jLabel3))
                 .addGap(18, 18, 18)
                 .addComponent(buttonClose)
                 .addContainerGap())
@@ -626,7 +653,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
                         updateBackgroundImageFile();
                     }
                 } else {
-                    Configuration.getInstance().setBackgroundImage(null);
+                    config.setBackgroundImage(null);
                     view.setBackgroundImage(null);
                 }
                 setControlStates();
@@ -652,7 +679,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
             programmaticChange = true;
             try {
                 boolean showBorders = checkBoxShowBorders.isSelected();
-                Configuration.getInstance().setShowBorders(showBorders);
+                config.setShowBorders(showBorders);
                 view.setDrawBorders(showBorders);
             } finally {
                 programmaticChange = false;
@@ -665,7 +692,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
             programmaticChange = true;
             try {
                 boolean showBiomes = checkBoxShowBiomes.isSelected();
-                Configuration.getInstance().setShowBiomes(showBiomes);
+                config.setShowBiomes(showBiomes);
                 view.setDrawBiomes(showBiomes);
             } finally {
                 programmaticChange = false;
@@ -678,7 +705,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
             programmaticChange = true;
             try {
                 TiledImageViewer.BackgroundImageMode mode = (TiledImageViewer.BackgroundImageMode) comboBoxBackgroundImageMode.getSelectedItem();
-                Configuration.getInstance().setBackgroundImageMode(mode);
+                config.setBackgroundImageMode(mode);
                 view.setBackgroundImageMode(mode);
             } finally {
                 programmaticChange = false;
@@ -689,7 +716,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
     private void buttonResetBackgroundColourActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_buttonResetBackgroundColourActionPerformed
         colourEditor1.setColour(VoidRenderer.getColour());
         view.setBackground(new Color(VoidRenderer.getColour()));
-        Configuration.getInstance().setBackgroundColour(-1);
+        config.setBackgroundColour(-1);
     }//GEN-LAST:event_buttonResetBackgroundColourActionPerformed
 
     private void buttonAddOverlayActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_buttonAddOverlayActionPerformed
@@ -709,6 +736,19 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
             editOverlay();
         }
     }//GEN-LAST:event_tableOverlaysMousePressed
+
+    private void spinnerRenderDistanceStateChanged(javax.swing.event.ChangeEvent evt) {//GEN-FIRST:event_spinnerRenderDistanceStateChanged
+        if (! programmaticChange) {
+            programmaticChange = true;
+            try {
+                int renderDistance = ((Number) spinnerRenderDistance.getValue()).intValue();
+                view.setViewDistance(renderDistance * 16);
+                config.setViewDistance(renderDistance * 16);
+            } finally {
+                programmaticChange = false;
+            }
+        }
+    }//GEN-LAST:event_spinnerRenderDistanceStateChanged
 
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.JButton buttonAddOverlay;
@@ -732,10 +772,13 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
     private javax.swing.JLabel jLabel12;
     private javax.swing.JLabel jLabel13;
     private javax.swing.JLabel jLabel14;
+    private javax.swing.JLabel jLabel2;
+    private javax.swing.JLabel jLabel3;
     private javax.swing.JLabel jLabel9;
     private javax.swing.JScrollPane jScrollPane2;
     private javax.swing.JSpinner spinnerContourSeparation;
     private javax.swing.JSpinner spinnerGridSize;
+    private javax.swing.JSpinner spinnerRenderDistance;
     private javax.swing.JTable tableOverlays;
     // End of variables declaration//GEN-END:variables
 
@@ -743,6 +786,7 @@ public class ConfigureViewDialog extends WorldPainterDialog implements WindowLis
     private final WorldPainter view;
     private final boolean enableOverlay;
     private final OverlaysTableModel overlaysTableModel;
+    private final Configuration config;
     /**
      * The (unscaled) image that is currently selected.
      */
