@@ -191,7 +191,7 @@ this.world.was.imported.from.an.existing.map=This world was imported from an exi
 dimension.properties=Dimension properties
 edit.the.properties.of.this.dimension=Edit the properties of this dimension
 view.distance=View distance
-enable.or.disable.showing.the.maximum.far.view.distance=Enable or disable showing the maximum (far) view distance
+enable.or.disable.showing.the.maximum.far.view.distance=Enable or disable showing the render distance
 walking.distances=Walking distances
 enable.or.disable.showing.the.walking.distances=Enable or disable showing the five minute, one day and one day and night walking distances
 rotate.light.clockwise=Rotate light clockwise
